# TypingTest

./: CMakeLists.txt  Component.h  Font.cpp  Font.h  Game.cpp  Game.h  MatchStatus.h  MouseEvents.cpp  MouseEvents.h  README.md  Screen.cpp  Screen.h  Strings.txt  Words.txt  main.cpp
